--- a/ValorAPI.Console/ValorAPI.Console.csproj
+++ b/ValorAPI.Console/ValorAPI.Console.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ValorAPI.Lib.Connection.Cache\ValorAPI.Lib.Connection.Cache.csproj" />
     <ProjectReference Include="..\ValorAPI.Lib.Connection\ValorAPI.Lib.Connection.csproj" />
     <ProjectReference Include="..\ValorAPI.Lib.Data\ValorAPI.Lib.Data.csproj" />
   </ItemGroup>
